--- a/css/estilo.css
+++ b/css/estilo.css
@@ -157,6 +157,15 @@ section > p{
 
 }
 
-.item img{
-    width: 150px;
+.cur {
+    margin: 10px 30px 10px 30px;
+    font-style: oblique;
+}
+
+.cur img{
+    width: 30%;
+}
+
+.cur h2 {
+    font-style: normal;
 }
